--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "eslint-config-trybe-backend": "^1.0.4",
     "express": "^4.17.2",
+    "http": "0.0.1-security",
     "mongodb": "^4.3.1",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "socket.io": "^4.4.1"
   }
 }
