--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "react-scripts": "5.0.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
+    "stylelint": "^14.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "lint": "eslint --no-inline-config --ext .js,.jsx --no-error-on-unmatched-pattern -c .eslintrc.json .",
+    "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
