--- a/server/package.json
+++ b/server/package.json
@@ -6,18 +6,26 @@
   "scripts": {
     "start": "node .",
     "lint": "eslint --no-inline-config --ext .js,.jsx --no-error-on-unmatched-pattern -c .eslintrc.json .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha src/tests/**/*$NAME*.js --exit",
+    "test:mocha": "nyc --all --include models --include services --include controllers mocha test/unit/*.js --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.3.6",
     "cors": "^2.8.5",
     "eslint-config-trybe-backend": "^1.0.4",
     "express": "^4.17.2",
     "http": "0.0.1-security",
+    "jest": "^27.5.1",
+    "mocha": "^9.2.0",
     "mongodb": "^4.3.1",
+    "mongodb-memory-server": "^8.3.0",
+    "mongodb-server": "^1.0.0",
     "mongoose": "^6.2.1",
+    "nyc": "^15.1.0",
+    "sinon": "^13.0.1",
     "socket.io": "^4.4.1"
   }
 }
